# log

./: CMakeLists.txt  README.md  build_x86.sh
code/include/: append_file.h  async_logging.h  buffer.h  current_thread.h  log_file.h  log_stream.h  logger.h  logging.h  mutex_macro.h  noncopyable.h  singleton.h  string_piece.h
code/src/: CMakeLists.txt  append_file.cpp  async_logging.cpp  current_thread.cpp  log_file.cpp  log_stream.cpp  logger.cpp  logging.cpp
demo/: CMakeLists.txt  a.out  logger.h  main.cpp
doc/: iostream的用途与局限.md  日志库设计与实现.md  日志相关基础知识.md
scripts/: build.sh  deploy.sh
